# microblog

./: .env  .flake8  .gitignore  LICENSE  README.md  microblog.py  pyproject.toml
app/: __init__.py  forms.py  routes.py
app/core/: config.py
app/models/: post.py  user.py
instance/: db.sqlite3
migrations/versions/: 606446893dd2_posts_table.py  e2b8e707c09e_users_table.py
